acm-dokuwiki/application/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: dokuwiki
  name: dokuwiki
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: dokuwiki-service
    weight: 100
  wildcardPolicy: None
